test/bad/generics/call02.px

func f(x: Int): Int def
    return x

func g<T>(x: T) def
    print f(x)

g('0')
